# workstate

./: .gitignore  .workstateignore  FEATURE_TRACKER.md  LICENSE  README.md  README.pt-br.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  deploy-docs.yml  lint-and-format.yml  publish-pypi.yml  publish-release.yml  workflow.publish-pypi.yml  workflow.publish-release.yml
docs-site/: astro.config.mjs  package-lock.json
docs-site/src/content/docs/: index.mdx
docs-site/src/content/docs/avancado/: desenvolvimento.md  hooks.md
docs-site/src/content/docs/foundations/: what-is-captured.md
docs-site/src/content/docs/guides/: aws-setup.md  installation.md  quickstart.md
docs-site/src/content/docs/pt-br/: index.mdx
docs-site/src/content/docs/pt-br/avancado/: hooks.md
docs-site/src/content/docs/pt-br/foundations/: what-is-captured.md
docs-site/src/content/docs/reference/: overview.md
scripts/: update_version.py
src/api/: cli.py
src/api/commands/: command.py  config_command.py  configure_command.py  delete_command.py  download_command.py  download_url_command.py  init_command.py  list_command.py  save_command.py  share_command.py  status_command.py
src/api/prompters/: aws_credentials_setup_prompter.py  configure_prompter.py  download_prompter.py  string_prompter.py  zip_file_selector_prompter.py
src/api/views/: config_view.py  list_view.py  share_info_view.py
src/cli/: cli.py  compare_entry.py  config.py  configure_entry.py  dashboard_entry.py  delete_entry.py  doctor_entry.py  download_entry.py  download_pre_signed_entry.py  download_url_entry.py  git_hook_entry.py  init_entry.py  inspect_entry.py  list_entry.py  profile_entry.py  protect_entry.py  prune_entry.py  report_entry.py  save_entry.py  share_entry.py  status_entry.py  sync_entry.py
src/clients/: s3_client.py
src/commands/: command.py  compare_command.py  config_command.py  configure_command.py  delete_command.py  doctor_command.py  download_command.py  download_pre_signed_command.py  download_url_command.py  git_hook_command.py  init_command.py  inspect_command.py  list_command.py  profile_command.py  protect_command.py  prune_command.py  report_command.py  save_command.py  share_command.py  status_command.py  sync_command.py
src/constants/: constants.py  envs.py  messages.py
src/exception/: aws_region_exception.py  credentials_validation_exception.py  workstate_exception.py
src/model/: aws_credentials.py
src/model/dto/: aws_credentials_dto.py  state_dto.py
src/prompts/: aws_credentials_setup_prompter.py  zip_file_selector_prompter.py
src/services/: cache_service.py  config_service.py  console_service.py  dashboard_service.py  file_service.py  hook_service.py  profile_service.py  pruning_service.py  report_service.py  state_service.py  update_service.py
src/templates/: code_tool.py  workstate_templates.py
src/utils/: clipboard_utils.py  git_utils.py  logs.py  system_info.py  utils.py
src/validators/: credentials_validators.py
src/views/: compare_view.py  config_view.py  inspect_view.py  list_view.py  share_info_view.py  status_view.py
tests/: conftest.py
tests/integration/: test_s3_connection.py  test_state_listing.py
tests/unit/: test_auto_bucket_creation.py  test_bucket_history.py  test_cache_service.py  test_dashboard_generation.py  test_global_list_default.py  test_init_minimalist.py  test_integrity_check.py  test_logging_location.py  test_profile_encryption.py  test_save_adhoc_include.py  test_secret_scanner.py  test_selective_extraction.py  test_state_listing_moto.py  test_state_service_cache.py  test_utils.py  test_whitelist_engine.py
(+29 files in other folders)
