[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workstate"
version = "1.2.0"
description = "Portable Development Environment Management Tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "mtpontes" }
]
dependencies = [
    "typer",
    "boto3",
    "pathspec",
    "boto3-stubs[essential]",
    "rich",
    "InquirerPy",
    "requests",
    "pyperclip",
    "cryptography",
]

[project.scripts]
workstate = "src.cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
show-fixes = true

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "W", "F"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true
