[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workstate"
version = "2.0.0"
description = "Portable Development Environment Management Tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "mtpontes" }
]
dependencies = [
    "typer",
    "boto3",
    "pathspec",
    "boto3-stubs[essential]",
    "rich",
    "InquirerPy",
    "requests",
    "pyperclip",
    "cryptography",
]

[project.scripts]
workstate = "src.cli.cli:app"

[tool.hatch.envs.default.scripts]
docs-serve = [
  "nvm use 22",
  "npm run dev --prefix docs-site"
]
build-local = [
    "python -m build",
    "pip install dist/*.whl --force-reinstall"
]
clean = [
    "rm -rf dist build *.egg-info"
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
    "testcontainers[localstack]",
    "moto[s3,athena,sts]",
    "requests",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
cov = "pytest --cov=src --cov-report=term-missing {args:tests}"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
show-fixes = true

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "W", "F"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning:testcontainers.localstack",
]
